vertical align hero

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,7 +10,7 @@
       <h2>Contact Us</h2>
       <div *ngIf="!name; else forminfo">
         <p>
-          Good to see you. We were just talking about you! Drop us a line and let us know why you are here.
+          Good to see you. We were just talking about you! Drop us a line and let us know why you're here.
         </p>
 
         <p>Email us at <a href="mailto:salam@jupiterandthegiraffe.com?subject=Hey I'm on your website!!" class="underline">salam@jupiterandthegiraffe.com</a>.</p>
