--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -1,13 +1,16 @@
 <section class="section friends">
   <header>
-    <h2>Our best <br>friends!</h2>
+    <h2 data-aos="fade-up">Our best <br>friends!</h2>
   </header>
   <p>
     Henry Ford said <q>My best friend is the one who brings out the best in me</q>.
     We're so proud to work with these people and the best was certainly brought out in us.
   </p>
   <ul class="row work list-unstyled">
-    <li class="col-sm-4 col-6" *ngFor="let friend of friends">
+    <li class="col-sm-4 col-6" *ngFor="let friend of friends; let i = index"
+        data-aos="fade-up"
+        [attr.data-aos-delay]="i * 150"
+    >
       <a [routerLink]="friend.page" class="friends__link">
         <img
           class="img-fluid friends__image"
