--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   <div class="row equal-heights home__about">
     <section class="col-sm">
       <header>
-        <h2>Who are Jupiter <br>and the Giraffe?</h2>
+        <h2 data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</h2>
       </header>
 
       <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
@@ -13,7 +13,7 @@
     </section>
     <section class="col-sm">
       <header>
-        <h2>What we <br>do</h2>
+        <h2 data-aos="fade-up" data-aos-delay="100">What we <br>do</h2>
       </header>
 
       <p>
