--- a/src/assets/sass/_h.scss
+++ b/src/assets/sass/_h.scss
@@ -3,14 +3,6 @@ h2,
 h3,
 h4 {
   font-family: $main-font;
-
-  &:after {
-    content: '_';
-    opacity: 1;
-    animation: blink;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-  }
 }
 
 h1 {
@@ -22,18 +14,28 @@ h1 {
 }
 
 h2 {
-  @include font-size($heading-2);
+  @include font-size($heading-2-mobile);
   margin-bottom: $margin-large;
   padding-bottom: $margin-large;
   border-bottom: 1px solid $color-pickledBluewood;
 
-  @media screen and (max-width: $screen-sm - 1) {
-    @include font-size($heading-2-mobile);
+  &:after {
+    content: '_';
+    opacity: 1;
+    animation: blink;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+  }
+
+  @include md {
+    @include font-size($heading-2);
   }
 
   br {
-    @media screen and (max-width: $screen-sm - 1) {
-      display: none;
+    display: none;
+
+    @include md {
+      display: block;
     }
   }
 }
