--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @import "../../../node_modules/bootstrap/scss/mixins";
 @import "../../../node_modules/bootstrap/scss/bootstrap-grid";
 @import "../../../node_modules/bootstrap/scss/images";
+@import "../../../node_modules/aos/dist/aos.css";
 
 //Elements
 @import "global";
