add contact animation

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <section class="section">
   <header>
-    <h1>
+    <h1 data-aos="fade-up">
       <div>Got work?</div>
       Or just here to say "Hi"?</h1>
   </header>
