--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,8 +1,13 @@
 <section class="section">
   <header>
-    <h1 data-aos="fade-up">
-      <div>Got work?</div>
-      Or just here to say "Hi"?</h1>
+    <h1>
+      <div data-aos="fade-up">
+        Got work?
+      </div>
+      <div data-aos="fade-up" data-aos-delay="100">
+        Or just here to say "Hi"?
+      </div>
+    </h1>
   </header>
 
   <div class="row">
