Add animation to homepage (#26)
* vertical align hero

* add contact animation

* other cleanup

* correct tests

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,8 +1,13 @@
 <section class="section">
   <header>
     <h1>
-      <div>Got work?</div>
-      Or just here to say "Hi"?</h1>
+      <div data-aos="fade-up">
+        Got work?
+      </div>
+      <div data-aos="fade-up" data-aos-delay="100">
+        Or just here to say "Hi"?
+      </div>
+    </h1>
   </header>
 
   <div class="row">
@@ -10,7 +15,7 @@
       <h2>Contact Us</h2>
       <div *ngIf="!name; else forminfo">
         <p>
-          Good to see you. We were just talking about you! Drop us a line and let us know why you are here.
+          Good to see you. We were just talking about you! Drop us a line and let us know why you're here.
         </p>
 
         <p>Email us at <a href="mailto:salam@jupiterandthegiraffe.com?subject=Hey I'm on your website!!" class="underline">salam@jupiterandthegiraffe.com</a>.</p>
