add images for boombocs

--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -1,6 +1,8 @@
 <section class="section friends">
   <header>
-    <h2 data-aos="fade-up">Our best <br>friends!</h2>
+    <h2>
+      <span data-aos="fade-up">Our best <br>friends!</span>
+    </h2>
   </header>
   <p>
     Henry Ford said <q>My best friend is the one who brings out the best in me</q>.
