--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,9 @@
   <div class="row equal-heights home__about">
     <section class="col-sm">
       <header>
-        <h2 data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</h2>
+        <h2>
+          <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
+        </h2>
       </header>
 
       <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
@@ -13,7 +15,9 @@
     </section>
     <section class="col-sm">
       <header>
-        <h2 data-aos="fade-up" data-aos-delay="100">What we <br>do</h2>
+        <h2>
+          <span data-aos="fade-up" style="display: inline-block;" data-aos-delay="100">What we <br>do</span>
+        </h2>
       </header>
 
       <p>
