--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -171,3 +171,19 @@ p:first-of-type {
   color: $color-white;
   background: $color-oldBrick;
 }
+
+span[data-aos] {
+  display: inline-block;
+}
+
+.clearfix {
+  &::after {
+    display: table;
+    clear: both;
+    content: '';
+  }
+}
+
+figure {
+  margin: 0;
+}
