--- a/src/app/boombocs/boombocs.component.html
+++ b/src/app/boombocs/boombocs.component.html
@@ -1,29 +1,40 @@
+<img src="assets/images/boombocs-feature.jpg" alt="" class="img-fluid" data-aos="fade-up">
+
 <section>
   <header>
-    <h1>Boombocs - Website Design/build</h1>
+    <h1>Boombocs - Website Re-design/build</h1>
   </header>
 
-  <p>
-    BoomBocs produce high-end, quality speaker systems. A colourful, fun yet powerful and professional sounding device, which is looking to enter high-end retail stores this year. BoomBocs came to us looking to revamp their website and give it its own, distinct identity. We welcomed the challenge.
-    A high-end speaker for audiophiles.
-  </p>
+    <p>
+      BoomBocs produce high-end, quality speaker systems. A colourful, fun yet powerful and professional sounding device, which is looking to enter high-end retail stores this year. BoomBocs came to us looking to revamp their website and give it its own, distinct identity. We welcomed the challenge.
+    </p>
 
-  <p>
-    We met with Jonny to discuss what the company were about, the people involved and the message they were looking to get across with the new design. Jonny was clear that it visually needed to look sleek and professional. Not gimmicky and needed to let the speakers provide the colour instead of the website content itself.
-  </p>
+    <p>
+      We met with Jonny to discuss what the company were about, the people involved and the message they were looking to get across with the new design. Jonny was clear that it visually needed to look sleek and professional. Not gimmicky and needed to let the speakers provide the colour instead of the website content itself.
+    </p>
 
-  <p>
-    It was also important that we made sure that we could get results given short deadlines. eCommerce sites are notoriously in-depth, with account pages, checkout journeys and product pages. We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later. This was agreed and the stage was set.
-  </p>
+    <p>
+      It was also important that we made sure that we could get results given short deadlines. eCommerce sites are notoriously in-depth, with account pages, checkout journeys and product pages. We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later. This was agreed and the stage was set.
+    </p>
 
-  <p>
-    From this initial meeting we were able to produce a moodboard of the sort of things we felt captured what we had discussed. It was also a useful tool to refer to when we came round to designing to help inspire us and move things forward efficiently.
-  </p>
+    <p>
+      From this initial meeting we were able to produce a moodboard of the sort of things we felt captured what we had discussed. It was also a useful tool to refer to when we came round to designing to help inspire us and move things forward efficiently.
+    </p>
 
-  <section>
+    <figure class="margin-bottom--lg text-center">
+      <img src="assets/images/boombocs-pinterest.jpg" data-aos="fade-up" alt="Boombocs moodboard" class="img-fluid">
+      <figcaption>Boombocs moodboard</figcaption>
+    </figure>
+
+  <section class="clearfix">
     <header>
       <h2>Product comes first</h2>
     </header>
+
+    <figure class="pull-left marging margin-right--lg">
+      <img src="assets/images/boombocs-concept-4.jpg" alt="" data-aos="fade-up">
+      <figcaption class="text-center">Initial concept</figcaption>
+    </figure>
 
     <p>
       Our initial designs focused on big imagery and simple text delivering the message of what BoomBocs is in a clear concise message. A key feature of BoomBocs is the hexagon logo. We played around with this in a variety of ways to help carry the iconography through the site. We experimented with wrapping images in hexagons, putting content in them. The language we insisted on each of the designs was important to these developments to. Not overly complex and simple, quick-to-read paragraphs.
@@ -93,6 +104,10 @@
     <p>
       Check it out at <a href="http://boombocs.com" rel="noreferrer noopener">BoomBocs.com</a>
     </p>
+
+    <div class="text-center">
+      <img src="assets/images/boombocs.png" alt="Boombocs logo" data-aos="fade-up">
+    </div>
   </section>
 </section>
 
