add terms and conditions and update slogan

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,7 +20,7 @@
           class="list-inline-item"
           [ngClass]="item.class"
         >
-          <a *ngIf="item.url" [href]="item.url" class="footer__link">{{item.name}}</a>
+          <a *ngIf="item.url" [routerLink]="item.url" class="footer__link">{{item.name}}</a>
         </li>
         <li class="list-inline-item pull-right">
           © 2016 Jupiter and the Giraffe
