--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -4,7 +4,7 @@
   </header>
 
   <p class="what-we-do__tagline">
-    Helping your brand find its voice and look amazing. Online and everywhere else.
+    We'll help your company find its voice, establish its brand and build you a kick ass website.
   </p>
 
   <section class="section">
