--- a/src/app/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.component.html
@@ -48,6 +48,7 @@
         <li><strong>1.3.8.</strong> The Client shall pay for any preliminary work which is produced at his/her request, whether experimentally or otherwise. A 50% rejection fee is applicable on all designs executed by the Agency should the Client cancel their contract/order.</li>
         <li><strong>1.3.9.</strong> When payment is overdue, the Agency may suspend work, service and/or delivery without notice and without prejudice to any other legal remedy until due payment has been made. Furthermore, any work started but incomplete may be suspended and payment therefore becomes immediately due and payable, notwithstanding anything expressed herein, and any monies in respect of.</li>
         <li><strong>1.3.10.</strong> The Agency may require payment in advance, or a deposit of at least 50% of the quote/estimate total prior to instigating work on an order, particularly but not limited to the following situations: new clients; clients with a poor payment history; large, lengthy or complex projects. Where a deposit is required, the balance shall be due upon completion of the work, unless otherwise agreed in writing in advance.</li>
+        <li><strong>1.3.11.</strong> If no contact is recieved or work on a project ceases to progress beyond a two week period, this will be considered a termination of the project and a new SOW may be written and may incur termination charges.</li>
       </ol>
     </section>
 
@@ -211,6 +212,7 @@
         <li><strong>3.1.1.</strong> The Agency can only program sites to be as secure as reasonably possible at the time of delivery and can not offer indemnity against future threats/developments.</li>
         <li><strong>3.1.2.</strong> Once the Agency has deemed a project to be complete, any amendments will be charged at the Agency’s standard billing structure of £100/hour.</li>
         <li><strong>3.1.3.</strong> The Agency develops websites for compatibility with the current version of Microsoft Internet Explorer/Edge and Chome: not all previous versions or every browser. If further compatibility is required, the Agency must be advised at the outset.</li>
+        <li><strong>3.1.4.</strong> With regards to SEO (Search engine optimisation) and SPA's (single page applicaitons), it must be made clear what search engines are deemed appropriate for the application to be compatible with which may involve additional work and costs to prerender the application.</li>
       </ol>
     </section>
 
