--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -7,7 +7,7 @@
 
   <div class="line--top line--bottom line hero__text-wrap">
     <div class="hero__text text-center" data-aos="fade-up" data-aos-delay="400">
-      A <span class="hero__lead-letter">digital agency</span> out of this world.
+      A <span class="hero__lead-letter">branding agency</span> out of this world.
     </div>
   </div>
   <div class="row">
