--- a/src/app/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.component.html
@@ -211,7 +211,7 @@
       <ol>
         <li><strong>3.1.1.</strong> The Agency can only program sites to be as secure as reasonably possible at the time of delivery and can not offer indemnity against future threats/developments.</li>
         <li><strong>3.1.2.</strong> Once the Agency has deemed a project to be complete, any amendments will be charged at the Agency’s standard billing structure of £100/hour.</li>
-        <li><strong>3.1.3.</strong> The Agency develops websites for compatibility with the current version of Microsoft Internet Explorer/Edge and Chome: not all previous versions or every browser. If further compatibility is required, the Agency must be advised at the outset.</li>
+        <li><strong>3.1.3.</strong> The Agency develops websites for compatibility with the current version of the major browsers (Microsoft Internet Explorer, Edge (Windows), Chrome, Safari, Firefox): not all previous versions or every browser. If further compatibility is required, the Agency must be advised at the outset.</li>
         <li><strong>3.1.4.</strong> With regards to SEO (Search engine optimisation) and SPA's (single page applicaitons), it must be made clear what search engines are deemed appropriate for the application to be compatible with which may involve additional work and costs to prerender the application.</li>
         <li><strong>3.1.5.</strong> Any updates or modifications made either by software updates, code tampering or infrastructure changes cannot be guaranteed against the final deliverable and would therefore mitigate The Agency as responsible or cause of anything that should happen as a result of the update or modification.</li>
       </ol>
