--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -1,10 +1,13 @@
+<img src="/assets/images/epoch-feature.jpg" alt="" class="img-fluid" data-aos="fade-up">
+
 <section>
   <header>
     <h1>EPOCH - Branding and website</h1>
   </header>
 
   <p>
-    EPOCH  are  industry  leaders  in  blockchain  technology  supporting  the  pharmaceutical  supply  chain.  They  needed  a  brand  and  an  ambitious  website  that  displayed  confidence  and  reassurance  that  they  are  the  thought-leaders  in  this  field.
+    EPOCH are industry leaders in blockchain technology supporting the pharmaceutical supply chain. They needed a brand
+    and an ambitious website that displayed confidence and reassurance that they are the thought-leaders in this field.
   </p>
 
   <strong>Launched: Oct 2018</strong>
@@ -15,13 +18,17 @@
     </header>
 
     <p>
-      Special thanks to our team for the quick and efficient response to short deadlines and our ever-challenging demands to produce quality work that delights our clientCredit is due to our UI designer,
-      Suzannah James who brought her creativity to the forefront of this website and made bold decisions that we feel tackle the status quo whilst our ever-brilliant logo designer Jo Durrant made another spectacular appearance and delivered another quality identity.
+      Special thanks to our team for the quick and efficient response to short deadlines and our ever-challenging
+      demands to produce quality work that delights our clientCredit is due to our UI designer,
+      Suzannah James who brought her creativity to the forefront of this website and made bold decisions that we feel
+      tackle the status quo whilst our ever-brilliant logo designer Jo Durrant made another spectacular appearance and
+      delivered another quality identity.
       Project lead and developer Samuel Gregory
     </p>
 
     <p>
-      We  wanted  a  website  for  EPOCH  which  not  only  looked  great  but  introduced  new  ideas.  Giving  their  website  these  modern,  ambitious  twists  meant  there  is  confidence  in  their  work.
+      We wanted a website for EPOCH which not only looked great but introduced new ideas. Giving their website these
+      modern, ambitious twists meant there is confidence in their work.
     </p>
   </section>
 
@@ -31,17 +38,25 @@
     </header>
 
     <p>
-      We  wanted  a  website  for  EPOCH  which  not  only  looked  great  but  introduced  new  ideas.  Giving  their  website  these  modern,  ambitious  twists  meant  there  is  confidence  in  their  work.
+      We wanted a website for EPOCH which not only looked great but introduced new ideas. Giving their website these
+      modern, ambitious twists meant there is confidence in their work.
     </p>
 
     <ul>
-      <li>EPOCH  will  provide  a  <strong>collaborative</strong>  environment  for  its  members  (and  sponsors)  where  new  ideas  can  be  discussed  and  experimented  with.</li>
-      <li>EPOCH  will  provide  a  <strong>communicative</strong>  platform  for  the  dissemination  of  these  ideas  and  other  supply  chain  developments.</li>
-      <li>EPOCH  will  be  an  <strong>educational</strong>  resource  for  its  members,  providing  thought  leadership  articles  and  insight  into  cutting  edge  developments.</li>
+      <li>EPOCH will provide a <strong>collaborative</strong> environment for its members (and sponsors) where new ideas
+        can be discussed and experimented with.
+      </li>
+      <li>EPOCH will provide a <strong>communicative</strong> platform for the dissemination of these ideas and other
+        supply chain developments.
+      </li>
+      <li>EPOCH will be an <strong>educational</strong> resource for its members, providing thought leadership articles
+        and insight into cutting edge developments.
+      </li>
     </ul>
 
     <p>
-      We  learnt  that  EPOCH  is  a  place  for  <strong>discovery</strong>,  <strong>enlightenment</strong>  and  a  place  where  new  ideas  are  <strong>born</strong>.
+      We learnt that EPOCH is a place for <strong>discovery</strong>, <strong>enlightenment</strong> and a place where
+      new ideas are <strong>born</strong>.
     </p>
   </section>
 
@@ -78,12 +93,18 @@
         </header>
 
         <p>
-          Our  logo  needed  vibrancy and  tenacity.  It  needed  a  wide  variety  of  applications  as  well  as  being  simple  enough  that  it  could  be  recognised  if  used  without  the  EPOCH  name.  The  blue-green  gradients  are  reflective  of  modern  pharmaceutical  trends  which  proves  to  be  striking  when  used  against  the  purity  of  white.The  three  sides  of  the  pyramid  represent  the  three  values  of  EPOCH  (educate,  communicate  &  disseminate).  The  fourth  side  is  missing  and  represents  the  support  needed  from  others  in  the  industry
+          Our logo needed vibrancy and tenacity. It needed a wide variety of applications as well as being simple enough
+          that it could be recognised if used without the EPOCH name. The blue-green gradients are reflective of modern
+          pharmaceutical trends which proves to be striking when used against the purity of white.The three sides of the
+          pyramid represent the three values of EPOCH (educate, communicate & disseminate). The fourth side is missing
+          and represents the support needed from others in the industry
         </p>
 
         <div class="row">
-          <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-phone-render.jpg" alt="iPhone with EPOCH logo demonstrated as an app on the homescreen"></div>
-          <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-web-render.jpg" alt="Browser with EPOCH logo demonstrated as an icon in the title of the tab"></div>
+          <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-phone-render.jpg"
+                                   alt="iPhone with EPOCH logo demonstrated as an app on the homescreen" data-aos="fade-up"></div>
+          <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-web-render.jpg"
+                                   alt="Browser with EPOCH logo demonstrated as an icon in the title of the tab" data-aos="fade-up"></div>
         </div>
       </section>
 
@@ -93,11 +114,18 @@
         </header>
 
         <p>
-          The  type  chosen  for  headings  is  the  same  used  in  the  logo  –  Cera  Pro  Medium.  We  then  used  Cutive  Mono,  a  monospace  font  for  body  text.  The  design  of  Cutive  Mono,  is  based  on  a  number  of  classic  typewriter  typefaces,  in  particular  the  faces  of  IBM's  'Executive,'  and  the  older  'Smith-Premier.'  In  Cutive,  these  old  faces  re-emerge  as  web  fonts  that  are  useful  for  adding  character  to  body  texts.  We  used  this  monospace  font  for  creating  an  intriguing  contrast  with  the  sans-serif  heading,  Cera  Pro.  The  use  of  Cutive  Mono  for  Epoch  Group  was  inspired  by  both  connotations  towards  academia  and  by  the  systematic  use  of  monospace  in  early  computing  and  computer  terminals.  In  fact,  this  still  carries  through  to  today  with  most  modern  IDEs  still  adopting  some  kind  of  monospace  as  their  default  font.
+          The type chosen for headings is the same used in the logo – Cera Pro Medium. We then used Cutive Mono, a
+          monospace font for body text. The design of Cutive Mono, is based on a number of classic typewriter typefaces,
+          in particular the faces of IBM's 'Executive,' and the older 'Smith-Premier.' In Cutive, these old faces
+          re-emerge as web fonts that are useful for adding character to body texts. We used this monospace font for
+          creating an intriguing contrast with the sans-serif heading, Cera Pro. The use of Cutive Mono for Epoch Group
+          was inspired by both connotations towards academia and by the systematic use of monospace in early computing
+          and computer terminals. In fact, this still carries through to today with most modern IDEs still adopting some
+          kind of monospace as their default font.
         </p>
 
         <div class="text-center">
-          <img src="/assets/images/epoch-type.png" alt="" class="img-fluid epoch__type-image">
+          <img src="/assets/images/epoch-type.png" alt="" class="img-fluid epoch__type-image" data-aos="fade-up">
         </div>
       </section>
 
@@ -108,13 +136,15 @@
 
         <p>
           Learning and discovery is a theme we wanted to weave into our design.
-          The iconography is inspired by origami as origami can be used to construct various geometrical designs and we wanted to make these same constructs digitally.
+          The iconography is inspired by origami as origami can be used to construct various geometrical designs and we
+          wanted to make these same constructs digitally.
           The folding and unfolding to create something beautiful is represented in the abstract patterns of the icons.
-          Some still hold subtle references to their purpose such as the arrow asking users to ‘explore’ or the numbering system used on the tiers as seen on the website.
+          Some still hold subtle references to their purpose such as the arrow asking users to ‘explore’ or the
+          numbering system used on the tiers as seen on the website.
         </p>
 
         <div class="text-center">
-          <img src="/assets/images/epoch-icons.png" alt="" class="img-fluid epoch__type-image">
+          <img src="/assets/images/epoch-icons.png" alt="" class="img-fluid epoch__type-image" data-aos="fade-up">
         </div>
       </section>
 
@@ -124,11 +154,12 @@
         </header>
 
         <p>
-          The logo creates a striking dominance where used so we made sure this got full attention with a dominance of black and white. Colour is used sparingly so that importance is noticed and call to actions have full effect.
+          The logo creates a striking dominance where used so we made sure this got full attention with a dominance of
+          black and white. Colour is used sparingly so that importance is noticed and call to actions have full effect.
         </p>
 
         <div class="text-center">
-          <img src="/assets/images/epoch-colors.png" alt="" class="img-fluid epoch__type-image">
+          <img src="/assets/images/epoch-colors.png" alt="" class="img-fluid epoch__type-image" data-aos="fade-up">
         </div>
       </section>
 
@@ -138,10 +169,12 @@
         </header>
 
         <p>
-          We encourage the use of black and white photography to install wisdom and clarity in its use cases. People, places and activity are the content of the imagery to elucidate EPOCH as an engaging and active brand to be involved with.
+          We encourage the use of black and white photography to install wisdom and clarity in its use cases. People,
+          places and activity are the content of the imagery to elucidate EPOCH as an engaging and active brand to be
+          involved with.
         </p>
 
-        <img src="/assets/images/epoch-event.jpg" alt="" class="img-fluid epoch__type-image">
+        <img src="/assets/images/epoch-event.jpg" alt="" class="img-fluid epoch__type-image" data-aos="fade-up">
       </section>
 
       <section>
@@ -150,16 +183,26 @@
         </header>
 
         <p>
-          The UI design took inspiration from two sources, firstly Origami, due to the notations of unfolding and discovery – something which really resonates with what epoch represents. Secondly, the use of geometrical patterns, angular shapes and monospace font throughout the site was inspired by an exhibition we went to see at the V&A called Chance and Control: Art in the Age of Computers. The exhibition explored computer generated art, art designed predominantly through the use of algorithms. This affinity between technology and design, order and entropy is something we wanted to bring to the design of Epoch to showcase their innovative individuality.
+          The UI design took inspiration from two sources, firstly Origami, due to the notations of unfolding and
+          discovery – something which really resonates with what epoch represents. Secondly, the use of geometrical
+          patterns, angular shapes and monospace font throughout the site was inspired by an exhibition we went to see
+          at the V&A called Chance and Control: Art in the Age of Computers. The exhibition explored computer generated
+          art, art designed predominantly through the use of algorithms. This affinity between technology and design,
+          order and entropy is something we wanted to bring to the design of Epoch to showcase their innovative
+          individuality.
         </p>
 
         <div class="row">
-          <div class="col-sm text-center"><img class="img-fluid epoch__type-image" src="/assets/images/epoch-research-1.jpg" alt=""></div>
-          <div class="col-sm text-center"><img class="img-fluid epoch__type-image" src="/assets/images/epoch-research-2.jpg" alt=""></div>
+          <div class="col-sm text-center"><img class="img-fluid epoch__type-image"
+                                               src="/assets/images/epoch-research-1.jpg" alt="" data-aos="fade-up"></div>
+          <div class="col-sm text-center"><img class="img-fluid epoch__type-image"
+                                               src="/assets/images/epoch-research-2.jpg" alt="" data-aos="fade-up"></div>
         </div>
 
         <p>
-          The site was designed with responsiveness at the heart of all design decisions; we wanted a site that functioned effortlessly on any device. We opted for a side navigation bar to help streamline and unclutter the overall canvas whilst simultaneously giving it a uniqueness that stands out.
+          The site was designed with responsiveness at the heart of all design decisions; we wanted a site that
+          functioned effortlessly on any device. We opted for a side navigation bar to help streamline and unclutter the
+          overall canvas whilst simultaneously giving it a uniqueness that stands out.
         </p>
       </section>
     </section>
@@ -170,7 +213,10 @@
       </header>
 
       <p>
-        The technology under the hood of EPOCH is Wordpress. We opted for this as the client knows the software and the site did not require anything more from a front end perspective such as React or Vue. With Wordpress’ flexibility in terms of plugins combined with the competency of the client, we had confidence they could extend the functionality and wouldn’t compromise the site.
+        The technology under the hood of EPOCH is Wordpress. We opted for this as the client knows the software and the
+        site did not require anything more from a front end perspective such as React or Vue. With Wordpress’
+        flexibility in terms of plugins combined with the competency of the client, we had confidence they could extend
+        the functionality and wouldn’t compromise the site.
       </p>
 
       <p>
@@ -181,7 +227,9 @@
       </p>
 
       <p>
-        The site lives on AWS. An EC2 container running LAMP. Once again, for simplicity containerisation and a separate RDS was not needed. In true agile fashion, it’s important that EPOCH got the site up and running and getting sponsorship without overcomplicating the architecture and delaying launch.
+        The site lives on AWS. An EC2 container running LAMP. Once again, for simplicity containerisation and a separate
+        RDS was not needed. In true agile fashion, it’s important that EPOCH got the site up and running and getting
+        sponsorship without overcomplicating the architecture and delaying launch.
       </p>
 
       <p>
