--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -18,17 +18,12 @@
     </header>
 
     <p>
-      Special thanks to our team for the quick and efficient response to short deadlines and our ever-challenging
-      demands to produce quality work that delights our clientCredit is due to our UI designer,
+      Special thanks to our team for the quick and efficient response to short deadlines and our determination to produce
+      quality work that delights our clients. Credit is due to our UI designer,
       Suzannah James who brought her creativity to the forefront of this website and made bold decisions that we feel
       tackle the status quo whilst our ever-brilliant logo designer Jo Durrant made another spectacular appearance and
       delivered another quality identity.
       Project lead and developer Samuel Gregory
-    </p>
-
-    <p>
-      We wanted a website for EPOCH which not only looked great but introduced new ideas. Giving their website these
-      modern, ambitious twists meant there is confidence in their work.
     </p>
   </section>
 
@@ -95,7 +90,7 @@
         <p>
           Our logo needed vibrancy and tenacity. It needed a wide variety of applications as well as being simple enough
           that it could be recognised if used without the EPOCH name. The blue-green gradients are reflective of modern
-          pharmaceutical trends which proves to be striking when used against the purity of white.The three sides of the
+          pharmaceutical trends which proves to be striking when used against the purity of white. The three sides of the
           pyramid represent the three values of EPOCH (educate, communicate & disseminate). The fourth side is missing
           and represents the support needed from others in the industry
         </p>
