--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -1,36 +1,29 @@
 <img src="/assets/images/epoch-feature.jpg" alt="" class="img-fluid" data-aos="fade-up">
 
-<section>
+<section class="case-study">
   <header>
     <h1>EPOCH - Branding and website</h1>
+    <strong>Launched: Oct 2018</strong>
   </header>
 
   <p>
-    EPOCH are industry leaders in blockchain technology supporting the pharmaceutical supply chain. They needed a brand
-    and an ambitious website that displayed confidence and reassurance that they are the thought-leaders in this field.
+    The members of EPOCH are a group of highly knowledgeable leaders in the pharmaceutical industry. Their minds come
+    together to redefine industry wide problems, elucidating the way for others and establishing a platform for
+    thought-leadership. We wanted a website for EPOCH which not only looked great but introduced new ideas. Giving their
+    website these modern, ambitious twists meant there is confidence in their work.
   </p>
 
-  <strong>Launched: Oct 2018</strong>
+  <p class="case-study__lead-text">
+    Special thanks to our team for the quick and efficient response to short deadlines and determination to produce
+    quality work that delights our clients
+  </p>
 
-  <section>
-    <header>
-      <h2>Special Thanks</h2>
-    </header>
+  <ul class="case-study__credits-list">
+    <li><strong>Suzannah James</strong> - UI Design</li>
+    <li><strong>Jo Durrant</strong> - Logo Design</li>
+    <li><strong>Samuel Gregory</strong> - Project lead and Developer</li>
+  </ul>
 
-    <p>
-      Special thanks to our team for the quick and efficient response to short deadlines and our ever-challenging
-      demands to produce quality work that delights our clientCredit is due to our UI designer,
-      Suzannah James who brought her creativity to the forefront of this website and made bold decisions that we feel
-      tackle the status quo whilst our ever-brilliant logo designer Jo Durrant made another spectacular appearance and
-      delivered another quality identity.
-      Project lead and developer Samuel Gregory
-    </p>
-
-    <p>
-      We wanted a website for EPOCH which not only looked great but introduced new ideas. Giving their website these
-      modern, ambitious twists meant there is confidence in their work.
-    </p>
-  </section>
 
   <section>
     <header>
@@ -38,8 +31,9 @@
     </header>
 
     <p>
-      We wanted a website for EPOCH which not only looked great but introduced new ideas. Giving their website these
-      modern, ambitious twists meant there is confidence in their work.
+      The European Platform on Changing Healthcare (EPOCH) - a working group dedicated to examining and advancing the
+      use of technology within the pharmaceutical supply chain.
+      Their values and goals are as follows:
     </p>
 
     <ul>
@@ -54,9 +48,9 @@
       </li>
     </ul>
 
-    <p>
-      We learnt that EPOCH is a place for <strong>discovery</strong>, <strong>enlightenment</strong> and a place where
-      new ideas are <strong>born</strong>.
+    <p class="case-study__lead-text">
+      We learnt that EPOCH is a place for Discovery of what lies ahead for the industry, Enlightenment - for others to
+      grow and learn and Innovation - a place where new ideas are born
     </p>
   </section>
 
@@ -66,10 +60,10 @@
     </header>
 
     <ol>
+      <li>Logo</li>
       <li>
         Design
         <ol>
-          <li>Logo</li>
           <li>Typography</li>
           <li>Iconography</li>
           <li>Colour</li>
@@ -84,29 +78,52 @@
 
     <section>
       <header>
+        <h3 id="logo">Logo</h3>
+      </header>
+
+      <p>
+        Our logo needed vibrancy and tenacity. It needed a wide variety of applications as well as the simplicity to be
+        recognised if used without the EPOCH name. The blue-green gradients are reflective of modern pharmaceutical
+        trends and prove to be striking when used against the purity of white.
+        The three sides of the pyramid represent the three values of EPOCH (educate, communicate & disseminate). The
+        fourth side is missing and represents the support needed from others in the industry.
+      </p>
+
+      <div class="row">
+        <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-phone-render.jpg"
+                                 alt="iPhone with EPOCH logo demonstrated as an app on the homescreen"
+                                 data-aos="fade-up"></div>
+        <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-web-render.jpg"
+                                 alt="Browser with EPOCH logo demonstrated as an icon in the title of the tab"
+                                 data-aos="fade-up"></div>
+      </div>
+    </section>
+
+    <section>
+      <header>
         <h3 id="design">1. Design</h3>
       </header>
 
-      <section>
-        <header>
-          <h4 id="logo">Logo</h4>
-        </header>
+      <p>
+        The UI design took inspiration from two sources, firstly Origami, due to the notations of unfolding and
+        discovery – something which really resonates with what EPOCH represents. Secondly, the use of geometrical
+        patterns and angular shapes throughout the site.
+      </p>
 
-        <p>
-          Our logo needed vibrancy and tenacity. It needed a wide variety of applications as well as being simple enough
-          that it could be recognised if used without the EPOCH name. The blue-green gradients are reflective of modern
-          pharmaceutical trends which proves to be striking when used against the purity of white.The three sides of the
-          pyramid represent the three values of EPOCH (educate, communicate & disseminate). The fourth side is missing
-          and represents the support needed from others in the industry
-        </p>
+      <p>
+        An exhibition we saw at the V&A called <a
+        href="https://www.vam.ac.uk/exhibitions/chance-and-control-art-in-the-age-of-computers">Chance and Control: Art
+        in the Age of Computers</a> really inspired us. The exhibition explored computer generated art and art designed
+        predominantly through the use of algorithms. This affinity between technology and design, order and entropy, is
+        something we wanted to bring to the design of Epoch to showcase their innovative individuality.
+      </p>
 
-        <div class="row">
-          <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-phone-render.jpg"
-                                   alt="iPhone with EPOCH logo demonstrated as an app on the homescreen" data-aos="fade-up"></div>
-          <div class="col-sm"><img class="img-fluid" src="/assets/images/epoch-web-render.jpg"
-                                   alt="Browser with EPOCH logo demonstrated as an icon in the title of the tab" data-aos="fade-up"></div>
-        </div>
-      </section>
+      <div class="row">
+        <div class="col-sm text-center"><img class="img-fluid epoch__type-image"
+                                             src="/assets/images/epoch-research-1.jpg" alt="" data-aos="fade-up"></div>
+        <div class="col-sm text-center"><img class="img-fluid epoch__type-image"
+                                             src="/assets/images/epoch-research-2.jpg" alt="" data-aos="fade-up"></div>
+      </div>
 
       <section>
         <header>
@@ -114,14 +131,13 @@
         </header>
 
         <p>
-          The type chosen for headings is the same used in the logo – Cera Pro Medium. We then used Cutive Mono, a
-          monospace font for body text. The design of Cutive Mono, is based on a number of classic typewriter typefaces,
-          in particular the faces of IBM's 'Executive,' and the older 'Smith-Premier.' In Cutive, these old faces
-          re-emerge as web fonts that are useful for adding character to body texts. We used this monospace font for
-          creating an intriguing contrast with the sans-serif heading, Cera Pro. The use of Cutive Mono for Epoch Group
-          was inspired by both connotations towards academia and by the systematic use of monospace in early computing
-          and computer terminals. In fact, this still carries through to today with most modern IDEs still adopting some
-          kind of monospace as their default font.
+          For our typography, we chose two contrasting and distinct fonts. For headings, we opted for a lively and
+          brazen sans-serif font – Cera Pro Medium, which also makes an appearance in the logo. For body text, we
+          selected Cutive Mono – a wonderful and quirky monospace font inspired by computing and the default font of the
+          terminal and IDE’s. The design of Cutive Mono, is based on a number of classic typewriter typefaces, in
+          particular the face of IBM’s ‘Executive’. In Cutive, these old faces re-emerge as web fonts that are useful
+          for adding character to body texts. Together, these fonts create a powerful visual hierarchy whilst bringing
+          personality to the EPOCH brand.
         </p>
 
         <div class="text-center">
@@ -135,12 +151,11 @@
         </header>
 
         <p>
-          Learning and discovery is a theme we wanted to weave into our design.
-          The iconography is inspired by origami as origami can be used to construct various geometrical designs and we
-          wanted to make these same constructs digitally.
-          The folding and unfolding to create something beautiful is represented in the abstract patterns of the icons.
-          Some still hold subtle references to their purpose such as the arrow asking users to ‘explore’ or the
-          numbering system used on the tiers as seen on the website.
+          Learning and discovery is a theme we wanted to weave into our design. The iconography is inspired by origami
+          as this can be used to construct various geometrical designs and we wanted to make these same constructs
+          digitally. The folding and unfolding to create something beautiful is represented in the abstract patterns of
+          the icons. Some still hold subtle references to their purpose such as the arrow asking users to ‘explore’ or
+          the numbering system used on the tiers as seen on the <a href="http://epoch-group.org">website</a>.
         </p>
 
         <div class="text-center">
@@ -155,7 +170,8 @@
 
         <p>
           The logo creates a striking dominance where used so we made sure this got full attention with a dominance of
-          black and white. Colour is used sparingly so that importance is noticed and call to actions have full effect.
+          black and white. Colour is used sparingly so that things of greater import are noticed and call to actions
+          have full effect.
         </p>
 
         <div class="text-center">
@@ -176,35 +192,6 @@
 
         <img src="/assets/images/epoch-event.jpg" alt="" class="img-fluid epoch__type-image" data-aos="fade-up">
       </section>
-
-      <section>
-        <header>
-          <h4 id="ui-design">UI Design</h4>
-        </header>
-
-        <p>
-          The UI design took inspiration from two sources, firstly Origami, due to the notations of unfolding and
-          discovery – something which really resonates with what epoch represents. Secondly, the use of geometrical
-          patterns, angular shapes and monospace font throughout the site was inspired by an exhibition we went to see
-          at the V&A called Chance and Control: Art in the Age of Computers. The exhibition explored computer generated
-          art, art designed predominantly through the use of algorithms. This affinity between technology and design,
-          order and entropy is something we wanted to bring to the design of Epoch to showcase their innovative
-          individuality.
-        </p>
-
-        <div class="row">
-          <div class="col-sm text-center"><img class="img-fluid epoch__type-image"
-                                               src="/assets/images/epoch-research-1.jpg" alt="" data-aos="fade-up"></div>
-          <div class="col-sm text-center"><img class="img-fluid epoch__type-image"
-                                               src="/assets/images/epoch-research-2.jpg" alt="" data-aos="fade-up"></div>
-        </div>
-
-        <p>
-          The site was designed with responsiveness at the heart of all design decisions; we wanted a site that
-          functioned effortlessly on any device. We opted for a side navigation bar to help streamline and unclutter the
-          overall canvas whilst simultaneously giving it a uniqueness that stands out.
-        </p>
-      </section>
     </section>
 
     <section>
@@ -213,17 +200,12 @@
       </header>
 
       <p>
-        The technology under the hood of EPOCH is Wordpress. We opted for this as the client knows the software and the
-        site did not require anything more from a front end perspective such as React or Vue. With Wordpress’
-        flexibility in terms of plugins combined with the competency of the client, we had confidence they could extend
-        the functionality and wouldn’t compromise the site.
-      </p>
-
-      <p>
-        A subtle element to the logo was the beautiful blue which highlights the 'V'.
-        That blue peppers throughout the website intermittently which ties it all together.
-        We also discovered a great compliment to the light blue was a dark blue gradient.
-        The website gave us a good excuse to utilise this discovery.
+        The site was designed with responsiveness at its core so that it functions effortlessly on any device. We opted
+        for a side navigation bar to help streamline and unclutter the overall canvas whilst simultaneously giving it a
+        uniqueness that stands out. The technology under the hood of EPOCH is Wordpress. We opted for this as the client
+        knows the software and the site did not require anything more technologically from a front end perspective such
+        as React or Vue. With Wordpress’ flexibility in terms of plugins combined with the competency of the client, we
+        had confidence they could extend the functionality and wouldn’t compromise the site.
       </p>
 
       <p>
