--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
         >
           <a *ngIf="item.url" [routerLink]="item.url" class="footer__link">{{item.name}}</a>
         </li>
-        <li class="list-inline-item pull-right copywrite">
+        <li class="list-inline-item pull-right">
           © {{ today | date:'yyyy' }} Jupiter and the Giraffe
         </li>
       </ul>
