--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,7 +23,7 @@
           <a *ngIf="item.url" [routerLink]="item.url" class="footer__link">{{item.name}}</a>
         </li>
         <li class="list-inline-item pull-right">
-          © 2016 Jupiter and the Giraffe
+          © {{ today | date:'yyyy' }} Jupiter and the Giraffe
         </li>
       </ul>
       <span class="footer__giraffe">
