--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -78,7 +78,7 @@
 
     <section>
       <header>
-        <h3 id="logo">Logo</h3>
+        <h3 id="logo">1. Logo</h3>
       </header>
 
       <p>
@@ -101,7 +101,7 @@
 
     <section>
       <header>
-        <h3 id="design">1. Design</h3>
+        <h3 id="design">2. Design</h3>
       </header>
 
       <p>
