--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -16,8 +16,8 @@
       <a [routerLink]="friend.page" class="friends__link">
         <img
           class="img-fluid friends__image"
-          src="/assets/images/{{ friend.img }}.png"
-          srcset="/assets/images/{{friend.img}}.png 1x, /assets/images/{{friend.img}}@2x.png 2x"
+          src="assets/images/{{ friend.img }}.png"
+          srcset="assets/images/{{friend.img}}.png 1x, assets/images/{{friend.img}}@2x.png 2x"
           [attr.alt]="friend.name">
       </a>
     </li>
