--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <span class="footer__giraffe">
-        <img [src]="'/assets/images/giraffe.png'" [srcset]="'/assets/images/giraffe@2x.png 2x'" alt="">
+        <img [src]="'assets/images/giraffe.png'" [srcset]="'assets/images/giraffe@2x.png 2x'" alt="">
       </span>
     </div>
 </footer>
