--- a/src/assets/sass/_typography.scss
+++ b/src/assets/sass/_typography.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: $main-font;
-  src: url('/assets/fonts/kgsummerstormrough-webfont.woff2') format('woff2'),
-  url('/assets/fonts/kgsummerstormrough-webfont.woff') format('woff');
+  src: url('https://s3.eu-west-2.amazonaws.com/static.assets.jupiterandthegiraffe/kgsummerstormrough-webfont.woff2') format('woff2'),
+  url('https://s3.eu-west-2.amazonaws.com/static.assets.jupiterandthegiraffe/kgsummerstormrough-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
