--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
-$main-font: 'KG-Summer-Storm';
-$title-font: $main-font;
 $body-font: -apple-system,system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$main-font: 'KG-SummerStorm';
+$title-font: $main-font, Arial, sans-serif;
 $base-font: 16;
 $small-font: 14;
 $line-height-base: 1.5;
